--- a/assets/css/rt-stylesheet-public.css
+++ b/assets/css/rt-stylesheet-public.css
@@ -2,7 +2,7 @@
 .owl-carousel .owl-prev {
 	position: absolute;
 	top: 40%;
-	color: #ffffff !important;
+	color: #007bff !important;
 	font-size: 32px !important;
 	padding:20px !important;
 	transition: color .1s;
@@ -32,6 +32,35 @@
   	align-items: center !important;  
 }
 
+.owl-stage-outer {
+	margin:5px !important;
+	background-color: #000000 !important; 
+}
+
 button:focus {
 	outline: none !important;
+}
+
+.adjust {
+	max-height: 200px;
+}
+
+
+@media only screen and (min-width: 800px) {
+	.adjust {
+		max-height: 300px;
+	}
+}
+
+@media only screen and (min-width: 968px) {
+	.adjust {
+		max-height: 400px;
+	}
+}
+
+
+@media only screen and (min-width: 1100px) {
+	.adjust {
+		max-height: 500px;
+	}
 }
