--- a/assets/css/rt-stylesheet-public.css
+++ b/assets/css/rt-stylesheet-public.css
@@ -41,26 +41,16 @@ button:focus {
 	outline: none !important;
 }
 
-.adjust {
-	max-height: 200px;
-}
-
-
-@media only screen and (min-width: 800px) {
+@media only screen and (max-width: 1100px) {
 	.adjust {
-		max-height: 300px;
+		max-height: 300px !important;
 	}
 }
 
-@media only screen and (min-width: 968px) {
+@media only screen and (max-width: 800px) {
 	.adjust {
-		max-height: 400px;
+		max-height: 200px !important;
 	}
 }
 
 
-@media only screen and (min-width: 1100px) {
-	.adjust {
-		max-height: 500px;
-	}
-}
