--- a/assets/css/rt-stylesheet-public.css
+++ b/assets/css/rt-stylesheet-public.css
@@ -34,7 +34,11 @@
 
 .owl-stage-outer {
 	margin:5px !important;
-	background-color: #000000 !important; 
+	background-color: rgba(0,0,0,0) !important; 
+}
+
+.owl-carousel .owl-item .owl-lazy {
+    opacity: 1 !important;
 }
 
 button:focus {
